# Ai-assement-powred-education

./: .gitignore  paper.aux  paper.out  paper.tex  paper.toc  test_sample.py
exam-forge/backend/: .env.example  exercise_history.json  pyproject.toml
exam-forge/backend/app/: dataset.py  evaluator.py  exam_assembler.py  exam_planner.py  generator.py  main.py  schemas.py  settings.py  template_analyzer.py
exam-forge/backend/app/rag/: __init__.py  arabic_embedder.py  bm25_store.py  chunker.py  indexer.py  retriever.py  tfidf_store.py
exam-forge/backend/app/rag_cloud/: __init__.py  adapter.py  embedder.py  indexer.py  retriever.py  schema.sql  store.py
exam-forge/backend/data/final_unified/Law/teacher_4/: exam 2.json  exam.json  exam10.json  exam3.json  exam4.json  exam5.json  (+4 more)
exam-forge/backend/rag_indices/Law/: arabic_faiss.index  arabic_ids.json  bm25.pkl  chunks.json  faiss.index  tfidf.npz  vocab.json
exam-forge/backend/rag_indices/algo/: bm25.pkl  chunks.json  faiss.index  tfidf.npz  vocab.json
exam-forge/backend/rag_indices/commerce/: bm25.pkl  chunks.json  faiss.index  tfidf.npz  vocab.json
exam-forge/backend/rag_indices/compilation/: bm25.pkl  chunks.json  faiss.index  tfidf.npz  vocab.json
exam-forge/backend/rag_indices/se/: bm25.pkl  chunks.json  faiss.index  tfidf.npz  vocab.json
exam-forge/backend/validated/algo/: Exercise_20260506T180103282745.json  Exercise_20260507T112634331541.json
exam-forge/backend/validated/algo/favorite/: Exercise_20260508T192800805481.json  Exercise_20260510T073241092454.json  Exercise_20260510T073710346322.json
(+330 files in other folders)
